<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>disaster_sim</name>
  <version>0.1.0</version>
  <description>
    Disaster source diffusion simulation and gradient-guided autonomous
    navigation add-on for the Pure-tracking SLAM project.
    Provides a physics-respecting hazard field (fire / gas / pollution) that
    is blocked by walls in the OccupancyGrid, and a gradient explorer that
    automatically generates goal poses to drive the robot to the source.
  </description>
  <maintainer email="clibang2022@163.com">disaster_sim</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>nav_slam</depend>
  <depend>gazebo_modele</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
